# cortexd

./: .gitignore  CLAUDE.md  Makefile  PLANNING.md  README.md  install-binary.sh  install.sh  mix.exs  uninstall.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
c_src/: Makefile  peercred_nif.c
cli/: Cargo.toml
cli/src/: main.rs
config/: config.exs
docs/adr/: 001-mesh-networking.md  002-distribution-message-filter.md  003-local-uid-remote-node-identity.md
examples/: ralph-cortex.sh
examples/claude-hooks/: CLAUDE.md.example  README.md  prompt-context.sh  response-consolidate.sh  session-end.sh  session-start.sh  settings.json.example
lib/: cortex.ex
lib/cortex/: acl.ex  application.ex  cli.ex  client.ex  handler.ex  identity.ex  peercred.ex  protocol.ex  server.ex  store.ex  sync.ex  tls_server.ex  version.ex
lib/cortex/mesh/: certs.ex  dist_config.ex  manager.ex  token.ex
openspec/changes/adr-001-mesh-networking/: design.md  proposal.md  tasks.md
plugins/agent-identity/: README.md  setup.sh
plugins/agent-identity/.claude-plugin/: plugin.json
plugins/agent-identity/commands/: list-agents.md  spawn-agent.md
rel/: env.sh.eex
test/: cortex_test.exs  test_helper.exs
test/cortex/: acl_scope_test.exs  store_federated_rejection_test.exs  store_federated_test.exs  store_identity_test.exs  sync_test.exs
test/cortex/mesh/: certs_test.exs  dist_activation_test.exs  dist_config_test.exs  integration_test.exs  tls_handler_identity_test.exs  tls_test.exs  token_test.exs
test/support/: mesh_helpers.ex
(+4 files in other folders)
