[package]
name = "cortex-cli"
version = "0.1.0-alpha"
edition = "2021"
description = "CLI for Cortex local storage daemon"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
rmpv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
